# sonora

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.cursor/rules/: PROJECT_OVERVIEW.md
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  railway.json  railway.worker.json
backend/app/: __init__.py  main.py  schemas.py  worker.py
backend/app/api/: auth.py  deps.py  health.py  invites.py  jobs.py  media.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: models.py  session.py
backend/app/services/: bootstrap.py  job_queue.py  media_probe.py  rate_limit.py  storage.py  ytdlp_config.py
backend/tests/: test_api.py
docs/: ARCHITECTURE.md  DEPLOY.md
frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/invite/[token]/: page.tsx
frontend/components/: sonora-app.tsx
frontend/lib/: api.ts  session.ts
paper/: IMPROVEMENTS.md  Interspeech_paper_improvements.md
workers/: README.md
